kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-classifier
  labels:
    app: image-classifier
spec:
  selector:
    app: image-classifier
  ports:
  - port: 80
    targetPort: 8000
    name: http
  - port: 8001
    targetPort: 8001
    name: metrics
  type: LoadBalancer
